--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,7 @@
     <div class="country-info"></div>
 
     <script src="index.js"></script>
+    <script src="./templates/country-list.hbs"></script>
+    <script src="./templates/country-card.hbs"></script>
   </body>
 </html>
